--- a/_static/custom.css
+++ b/_static/custom.css
@@ -195,8 +195,16 @@ h2 {
 
 h3 {
     display: inline-block;
+/*
     background-color: #3C9A9A;
     color: #FFFFFF;
+*/
+    color: #3C9A9A;
+    background-color: #FFFFFF;
+    border-style: dashed;
+    border-width: 1;
+    border-color: #3C9A9A;
+
     margin: 30px 0px 10px 0px;
     padding: 5px 0 5px 10px;
 }
@@ -270,4 +278,19 @@ h4, h5, h6 {
 
 .default-hidden {
     display: none;
+}
+
+/***************************************************/
+/* strike-through text  ****************************/
+/***************************************************/
+.strike {
+  text-decoration: line-through;
+}
+
+/***************************************************/
+/* the default font size for sphinx table titles   */
+/* is too small                                    */
+/***************************************************/
+ .rst-content table.docutils caption {
+  font-size: 150%;
 }
